--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@ img{
 
 /* SECTION RESPONSIVE */
 @media screen and (max-width: 420px) {
+  .row{
+    max-width: 100%;
+  }
   #lezioni .row > .left,
   #lezioni .row > .right,
   #steps .row > .left,
